results/SVCOMP/conversational/log-RegexMatches01-2024_03_15_03_41_37.txt
import java.util.regex.Matcher;
import java.util.regex.Pattern;

public class RegexMatches01 {
  //@ ensures \result ==> (\forall int i; 0 <= i && i < matcher.groupCount(); matcher.group(i).equals("WWWW's Birthday is 12-17-77"));
  public static boolean f() {
    Pattern expression = Pattern.compile("W.*\\d[0-35-9]-\\d\\d-\\d\\d");

    String string1 =
        "XXXX's Birthday is 05-12-75\n"
            + "YYYY's Birthday is 11-04-68\n"
            + "ZZZZ's Birthday is 04-28-73\n"
            + "WWWW's Birthday is 12-17-77";

    Matcher matcher = expression.matcher(string1);

    while (matcher.find()) {
      System.out.println(matcher.group());
      String tmp = matcher.group();
      if (!tmp.equals("WWWW's Birthday is 12-17-77"))
        return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/RegexMatches01.java:5: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i < matcher.groupCount(); matcher.group(i).equals("WWWW's Birthday is 12-17-77"));
                                                        ^
  symbol:   variable matcher
  location: class RegexMatches01
/home/max/Documents/JMLGPT/tmp/RegexMatches01.java:5: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i < matcher.groupCount(); matcher.group(i).equals("WWWW's Birthday is 12-17-77"));
                                                                              ^
  symbol:   variable matcher
  location: class RegexMatches01
2 errors

import java.util.regex.Matcher;
import java.util.regex.Pattern;

public class RegexMatches01 {
  //@ ensures \result ==> (\forall int i; 0 <= i && i < string1.length(); string1.substring(i, i+27).equals("WWWW's Birthday is 12-17-77"));
  public static boolean f() {
    Pattern expression = Pattern.compile("W.*\\d[0-35-9]-\\d\\d-\\d\\d");

    String string1 =
        "XXXX's Birthday is 05-12-75\n"
            + "YYYY's Birthday is 11-04-68\n"
            + "ZZZZ's Birthday is 04-28-73\n"
            + "WWWW's Birthday is 12-17-77";

    Matcher matcher = expression.matcher(string1);

    while (matcher.find()) {
      System.out.println(matcher.group());
      String tmp = matcher.group();
      if (!tmp.equals("WWWW's Birthday is 12-17-77"))
        return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/RegexMatches01.java:5: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i < string1.length(); string1.substring(i, i+27).equals("WWWW's Birthday is 12-17-77"));
                                                        ^
  symbol:   variable string1
  location: class RegexMatches01
/home/max/Documents/JMLGPT/tmp/RegexMatches01.java:5: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i < string1.length(); string1.substring(i, i+27).equals("WWWW's Birthday is 12-17-77"));
                                                                          ^
  symbol:   variable string1
  location: class RegexMatches01
2 errors

import java.util.regex.Matcher;
import java.util.regex.Pattern;

public class RegexMatches01 {
  //@ ensures \result ==> (\forall int i; 0 <= i && i < "WWWW's Birthday is 12-17-77".length(); "WWWW's Birthday is 12-17-77".charAt(i) == matcher.group().charAt(i));
  public static boolean f() {
    Pattern expression = Pattern.compile("W.*\\d[0-35-9]-\\d\\d-\\d\\d");

    String string1 =
        "XXXX's Birthday is 05-12-75\n"
            + "YYYY's Birthday is 11-04-68\n"
            + "ZZZZ's Birthday is 04-28-73\n"
            + "WWWW's Birthday is 12-17-77";

    Matcher matcher = expression.matcher(string1);

    while (matcher.find()) {
      System.out.println(matcher.group());
      String tmp = matcher.group();
      if (!tmp.equals("WWWW's Birthday is 12-17-77"))
        return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/RegexMatches01.java:5: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i < "WWWW's Birthday is 12-17-77".length(); "WWWW's Birthday is 12-17-77".charAt(i) == matcher.group().charAt(i));
                                                                                                                                           ^
  symbol:   variable matcher
  location: class RegexMatches01
1 error

import java.util.regex.Matcher;
import java.util.regex.Pattern;

public class RegexMatches01 {
  //@ ensures \result ==> (\forall int i; 0 <= i && i < "WWWW's Birthday is 12-17-77".length(); "WWWW's Birthday is 12-17-77".charAt(i) == "WWWW's Birthday is 12-17-77".charAt(i));
  public static boolean f() {
    Pattern expression = Pattern.compile("W.*\\d[0-35-9]-\\d\\d-\\d\\d");

    String string1 =
        "XXXX's Birthday is 05-12-75\n"
            + "YYYY's Birthday is 11-04-68\n"
            + "ZZZZ's Birthday is 04-28-73\n"
            + "WWWW's Birthday is 12-17-77";

    Matcher matcher = expression.matcher(string1);

    while (matcher.find()) {
      System.out.println(matcher.group());
      String tmp = matcher.group();
      if (!tmp.equals("WWWW's Birthday is 12-17-77"))
        return false;
    }
    return true;
  }
}
